<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_screen_image" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/verify_your_number"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_image" />

    <TextView
        android:id="@+id/login_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/please_enter_your_country_code_n_and_phone_number_for_verification"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/country_code_text"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/text_input_bg"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/_91"
        android:inputType="number"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_desc"
        android:importantForAutofill="no"
        android:layout_marginLeft="32dp" />

    <EditText
        android:id="@+id/phone_number_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_input_bg"
        android:ems="10"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/your_phone_number"
        android:inputType="phone"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/country_code_text"
        app:layout_constraintTop_toBottomOf="@+id/login_desc"
        android:importantForAutofill="no"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="32dp" />

    <Button
        android:id="@+id/generate_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/primary_btn_bg"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/generate_otp"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_text" />



    <ProgressBar
        android:id="@+id/login_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/generate_btn"
        app:layout_constraintEnd_toEndOf="@+id/generate_btn"
        app:layout_constraintTop_toTopOf="@+id/generate_btn"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/login_form_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/working"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generate_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>